--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>ZeroZeroNi's page</title>
   </head>
   <body>
-    <a href="/CSS/">CSS</a>
+    <a href="/CSS">CSS</a>
   </body>
 <html>
