--- a/css/index.html
+++ b/css/index.html
@@ -1,3 +1,3 @@
 <h1>Anilist</h1>
-<a href="/anilist.css">Anilist css (old)</a><br>
-<a href="/anilist2.css">Anilist css</a>
+<a href="/css/anilist.css">Anilist css (old)</a><br>
+<a href="/css/anilist2.css">Anilist css</a>
