--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>ZeroZeroNi's page</title>
   </head>
   <body>
-    <a href="/css">CSS</a>
+    <a href="/css">CSS</a><br>
     <a href="/search">search</a>
   </body>
 <html>
