--- a/search/index.html
+++ b/search/index.html
@@ -9,7 +9,7 @@
 		<a href="" class="header">Search</a>
 		<form id="search">
 			<div class="searchbarbox"><input type="text" name="searchbar" id="searchbar" autofocus="true" placeholder="Type something" autocomplete="off" required><br></div>
-			<input type="submit" id="searchbutton" value="Search" onclick="search()" formnovalidate>
+			<input type="button" id="searchbutton" value="Search" onclick="search()" formnovalidate>
 		</form>
 		<div id="theme" onclick="changetheme()">Change Theme</div>
 		</center>
