--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ZeroZeroNi's page</title>
+    <title>ZeroZeroNi</title>
   </head>
   <body>
     <a href="/css">CSS</a><br>
