--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
   <head>
     <title>ZeroZeroNi</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="/css">CSS</a><br>
-    <a href="/search">search</a>
+    <div class="navigation">
+
+    </div>
+    <div class="part">
+      <h1>Links</h1>
+      <a class="link" href="/css">CSS</a><br>
+      <a class="link" href="/search">search</a>
+    </div>
   </body>
 <html>
