--- a/css/index.html
+++ b/css/index.html
@@ -1,3 +1,17 @@
-<h1>Anilist</h1>
-<a href="/css/anilist.css">Anilist css (old)</a><br>
-<a href="/css/anilist2.css">Anilist css</a>
+<html>
+  <head>
+    <title>CSS - ZeroZeroNi</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="navigation">
+
+    </div>
+    <div class="form">
+      <h1>Links</h1>
+      <a class="link" href="/css/anilist.css">CSS</a><br>
+      <a class="link" href="/css/anilist2.css">search</a>
+    </div>
+  </body>
+<html>
