--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="navigation">
 
     </div>
-    <div class="part">
+    <div class="form">
       <h1>Links</h1>
       <a class="link" href="/css">CSS</a><br>
       <a class="link" href="/search">search</a>
