--- a/css/index.html
+++ b/css/index.html
@@ -9,9 +9,10 @@
 
     </div>
     <div class="form">
-      <h1>Links</h1>
-      <a class="link" href="/css/anilist.css">CSS</a><br>
-      <a class="link" href="/css/anilist2.css">search</a>
+      <h1>Anilist</h1>
+      <a class="link" href="/css/anilist.css">Anilist(Old)</a><br>
+      <a class="link" href="/css/anilist2.css">Anilist</a>
+      <h1>Discord</h1>
     </div>
   </body>
 <html>
