--- a/css/index.html
+++ b/css/index.html
@@ -13,6 +13,7 @@
       <a class="link" href="/css/anilist.css">Anilist(Old)</a><br>
       <a class="link" href="/css/anilist2.css">Anilist</a>
       <h1>Discord</h1>
+      <a class="link" href="/css/tycord.css">Tycord</a><br>
     </div>
   </body>
 <html>
