--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="de" dir="ltr">
   <head>
-    <title>ZeroZeroNi</title>
+    <meta charset="utf-8">
+    <title>ZeroZeroNii - Home</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <div class="navigation">
-
+  <body bgcolor="#0d1a26">
+    <div class="center">
+      <h1 class="header">ZeroZeroNii</h1>
+      <a class="link" href="/css/">CSS</a>
     </div>
-    <div class="form">
-      <h1>Links</h1>
-      <a class="link" href="/css">CSS</a><br>
-      <a class="link" href="/search">search</a>
-    </div>
+    <section id="section1">
+      <h2 class="header2">Downloads</h2>
+    </section>
   </body>
-<html>
+</html>
