--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body bgcolor="#0d1a26">
     <div class="center">
       <h1 class="header">ZeroZeroNii</h1>
-      <a class="link" href="/css/">CSS</a>
+      <a class="link" href="#section1">CSS</a>
     </div>
     <section id="section1">
-      <h2 class="header2">Downloads</h2>
+      <h2 class="header2">CSS</h2>
     </section>
   </body>
 </html>
