--- a/music/index.html
+++ b/music/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <script src="script.js"></script>
+    <meta charset="utf-8">
+    <title>CouldSound</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="player-box">
+      <img class="cover" src="cover.png" alt="">
+      <div class="player">
+        <div class="controls">
+          <audio id="song" preload="metadata" onloadedmetadata="mDur()" ontimeupdate="mPlay()">
+            <source src="song 70 beattt.mp3" type="audio/mpeg">
+          </audio>
+          <input id="play" type="image" src="svg/play-circle-outline.svg" onclick="playPause()" />
+        </div>
+        <input id="seekbar" type="range" name="rng" min="0" step="0.25" value="0" onchange="mSet()">
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
