--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body bgcolor="#0d1a26">
     <div class="center">
       <h1 class="header">ZeroZeroNii</h1>
-      <a class="link" href="css/index.html">CSS</a>
+      <a class="link" href="#section1">CSS</a>
       <a class="link" href="music/index.html">Music</a>
     </div>
 
@@ -28,12 +28,14 @@
 
     <section id="section1">
       <h2 class="header2" href="/css">CSS</h2>
-      <div class="form">
-        <h1 class="cssheader1">Anilist</h1>
-        <a class="csslink" href="css/anilist.css">Anilist(Old)</a><br>
-        <a class="csslink" href="css/anilist2.css">Anilist</a>
-        <h1 class="cssheader1">Discord</h1>
-        <a class="csslink" href="css/tycord.css">Tycord</a><br>
+      <div class="formbox">
+        <div class="form">
+          <h1 class="cssheader1">Anilist</h1>
+          <a class="csslink" href="css/anilist.css">Anilist(Old)</a><br>
+          <a class="csslink" href="css/anilist2.css">Anilist</a>
+          <h1 class="cssheader1">Discord</h1>
+          <a class="csslink" href="css/tycord.css">Tycord</a><br>
+        </div>
       </div>
     </section>
 
